--- a/src/css/style_main.css
+++ b/src/css/style_main.css
@@ -3,15 +3,74 @@
     font-weight:500;
     box-sizing:border-box
 }
+
 body{
     margin:0
 }
+
 button{
+    width:40px;
+    height:40px;
     border:none;
     background-color:inherit;
     cursor:pointer
+    
 }
-.icon-circle{
+
+.header__menu {
+    padding: 0;
+    background-image: url('../icons/header/menu.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.header__call{
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    background-image: url('../icons/header/call.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.header__chat{
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    background-image: url('../icons/header/chat.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.header__profile{
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    background-image: url('../icons/header/profile.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.header__repair{
+    background-image: url('../icons/header/repair.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.header__search{
+    background-image: url('../icons/header/search.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+/* .icon-circle{
     display:block;
     position:relative;
     width:40px;
@@ -20,15 +79,20 @@ button{
     border-radius:100%
 }
 
+
+
 .icon-circle img{
     position:absolute;
     top:50%;left:50%;
     transform:translate(-50%, -50%)
-}
+} */
+
 .header{
     height:88px;
     padding:24px 16px
 }
+
+
 .header__container{
     display:flex;
     padding:0;
@@ -148,14 +212,25 @@ button{
     height:40px
 }
 
-.main__more-btn,.main__hidden-btn{
-    display:block;
+.main__more-btn{
+    display:flex;
+    align-items: center;
     border:none;
     padding:0;
     margin:24px auto 34px 24px;
     height:24px;
+    width: 150px;
     background:none;
-    cursor:pointer
+    cursor:pointer;
+    background-image: url(../icons/more.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.main__more-txt {
+    display: inline-block;
+    margin: 0 15px;
 }
 
 .main__more-btn img,.main__hidden-btn img{
@@ -505,7 +580,8 @@ button{
         }
         
         .main__header::before{
-            left:-29px
+            left:-25px;
+            width: 5px;
         }
         
         .main__more-btn,.main__hidden-btn{
@@ -577,10 +653,9 @@ button{
                 display:none
             }
             
-            .main__container{
-                display:flex;
-                justify-content:space-between;
-                align-items:center
+            .main{
+                margin: 0 auto;
+                max-width: 1120px;
             }
             
             .main__link{
